--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-margin: 0;
+body {
   padding: 0;
-  margin: 0
+  margin: 0;
   font-family: "Roboto Mono", sans-serif;
   font-weight: 300;
+}
 canvas {
   display: block;
 }
