--- a/style.css
+++ b/style.css
@@ -23,3 +23,13 @@ button:active {
 button:focus {
   background: dodgerBlue;
 }
+#info {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 2rem;
+  font-size: 1rem;
+}
+#info a {
+  color: gray;
+}
