--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ button:focus {
 #info {
   position: fixed;
   bottom: 0;
-  left: 0;
-  padding: 2rem;
+  left: 10px;
   font-size: 1rem;
 }
 #info a {
