--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@ button:focus {
 }
 #info {
   position: fixed;
-  bottom: 0;
-  left: 10px;
-  padding-bottom: 2em;
+  top: 0;
+  right: 0;
+  padding-right: 2em;
   font-size: 1rem;
 }
 #info a {
